# CaliforniaSchoolsDashboardAPI

./: .gitignore  CMakeLists.txt  CaliforniaDashboardAPI.cpp  CaliforniaDashboardAPI.hh  README.md  json_example.json  main.cpp  summaryCard.cpp  summaryCard.hh
